--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -12,9 +12,17 @@
   <meta name="description" content="">
 
   {{ content_for_header }}
+  
+  <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
   {{ content_for_layout }}
+  {% section 'main-cart' %}
+  {% section 'footer' %}
 </body>
 </html>
